parser/y.output

state 0
	$accept: .contract_declaration $end 

	CONTRACT  shift 2
	.  error

	contract_declaration  goto 1

state 1
	$accept:  contract_declaration.$end 
	contract_declaration:  contract_declaration.NEWLINE 

	$end  accept
	NEWLINE  shift 3
	.  error


state 2
	contract_declaration:  CONTRACT.IDENT contract_read LBRACE NEWLINE contract_body RBRACE 

	IDENT  shift 4
	.  error


state 3
	contract_declaration:  contract_declaration NEWLINE.    (131)

	.  reduce 131 (src line 366)


state 4
	contract_declaration:  CONTRACT IDENT.contract_read LBRACE NEWLINE contract_body RBRACE 
	contract_read: .    (128)

	READ  shift 6
	.  reduce 128 (src line 356)

	contract_read  goto 5

state 5
	contract_declaration:  CONTRACT IDENT contract_read.LBRACE NEWLINE contract_body RBRACE 

	LBRACE  shift 7
	.  error


state 6
	contract_read:  READ.    (129)

	.  reduce 129 (src line 358)


state 7
	contract_declaration:  CONTRACT IDENT contract_read LBRACE.NEWLINE contract_body RBRACE 

	NEWLINE  shift 8
	.  error


state 8
	contract_declaration:  CONTRACT IDENT contract_read LBRACE NEWLINE.contract_body RBRACE 
	contract_data: .    (125)

	DATA  shift 11
	.  reduce 125 (src line 345)

	contract_data  goto 10
	contract_body  goto 9

state 9
	contract_declaration:  CONTRACT IDENT contract_read LBRACE NEWLINE contract_body.RBRACE 

	RBRACE  shift 12
	.  error


state 10
	contract_body:  contract_data.statements 
	statements: .    (15)

	.  reduce 15 (src line 168)

	statements  goto 13

state 11
	contract_data:  DATA.LBRACE NEWLINE var_declarations NEWLINE RBRACE NEWLINE 

	LBRACE  shift 14
	.  error


state 12
	contract_declaration:  CONTRACT IDENT contract_read LBRACE NEWLINE contract_body RBRACE.    (130)

	.  reduce 130 (src line 361)


state 13
	statements:  statements.NEWLINE 
	statements:  statements.switch 
	statements:  statements.statement NEWLINE 
	contract_body:  contract_data statements.    (127)

	IDENT  shift 31
	CALL  shift 28
	CALLCONTRACT  shift 29
	INDEX  shift 32
	NEWLINE  shift 15
	BREAK  shift 23
	CONTINUE  shift 24
	IF  shift 22
	RETURN  shift 25
	WHILE  shift 26
	FUNC  shift 27
	FOR  shift 30
	SWITCH  shift 18
	T_INT  shift 35
	T_BOOL  shift 34
	T_STR  shift 36
	T_ARR  shift 37
	T_MAP  shift 38
	T_FLOAT  shift 39
	T_MONEY  shift 40
	T_OBJECT  shift 41
	T_BYTES  shift 42
	T_FILE  shift 43
	.  reduce 127 (src line 350)

	ordinaltype  goto 33
	type  goto 21
	var  goto 19
	switch  goto 16
	statement  goto 17
	index  goto 20

state 14
	contract_data:  DATA LBRACE.NEWLINE var_declarations NEWLINE RBRACE NEWLINE 

	NEWLINE  shift 44
	.  error


state 15
	statements:  statements NEWLINE.    (16)

	.  reduce 16 (src line 170)


state 16
	statements:  statements switch.    (17)

	.  reduce 17 (src line 171)


state 17
	statements:  statements statement.NEWLINE 

	NEWLINE  shift 45
	.  error


state 18
	switch:  SWITCH.expr NEWLINE case default 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 46
	index  goto 56

state 19
	statement:  var.ASSIGN expr 
	statement:  var.ADD_ASSIGN expr 
	statement:  var.SUB_ASSIGN expr 
	statement:  var.MUL_ASSIGN expr 
	statement:  var.DIV_ASSIGN expr 
	statement:  var.MOD_ASSIGN expr 

	ADD_ASSIGN  shift 65
	SUB_ASSIGN  shift 66
	MUL_ASSIGN  shift 67
	DIV_ASSIGN  shift 68
	MOD_ASSIGN  shift 69
	ASSIGN  shift 64
	.  error


state 20
	index:  index.LBRACKET expr RBRACKET 
	statement:  index.ASSIGN expr 

	LBRACKET  shift 70
	ASSIGN  shift 71
	.  error


state 21
	type:  type.DOT ordinaltype 
	statement:  type.IDENT ASSIGN expr 
	statement:  type.ident_list 

	IDENT  shift 73
	DOT  shift 72
	.  error

	ident_list  goto 74

state 22
	statement:  IF.expr LBRACE statements RBRACE elif else 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 75
	index  goto 56

state 23
	statement:  BREAK.    (47)

	.  reduce 47 (src line 229)


state 24
	statement:  CONTINUE.    (48)

	.  reduce 48 (src line 230)


state 25
	statement:  RETURN.    (49)
	statement:  RETURN.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  reduce 49 (src line 231)

	expr  goto 76
	index  goto 56

state 26
	statement:  WHILE.expr LBRACE statements RBRACE 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 77
	index  goto 56

state 27
	statement:  FUNC.CALL par_declarations RPAREN rettype LBRACE statements RBRACE 

	CALL  shift 78
	.  error


state 28
	statement:  CALL.params RPAREN 
	params: .    (19)

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  reduce 19 (src line 175)

	params  goto 79
	expr  goto 80
	index  goto 56

state 29
	statement:  CALLCONTRACT.cntparams RPAREN 
	cntparams: .    (22)

	IDENT  shift 82
	.  reduce 22 (src line 181)

	cntparams  goto 81

state 30
	statement:  FOR.IDENT IN expr LBRACE statements RBRACE 
	statement:  FOR.IDENT COMMA IDENT IN expr LBRACE statements RBRACE 
	statement:  FOR.IDENT IN expr DOUBLEDOT expr LBRACE statements RBRACE 

	IDENT  shift 83
	.  error


state 31
	var:  IDENT.    (25)

	.  reduce 25 (src line 187)


state 32
	index:  INDEX.expr RBRACKET 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 84
	index  goto 56

state 33
	type:  ordinaltype.    (11)

	.  reduce 11 (src line 158)


state 34
	ordinaltype:  T_BOOL.    (1)

	.  reduce 1 (src line 145)


state 35
	ordinaltype:  T_INT.    (2)

	.  reduce 2 (src line 147)


state 36
	ordinaltype:  T_STR.    (3)

	.  reduce 3 (src line 148)


state 37
	ordinaltype:  T_ARR.    (4)

	.  reduce 4 (src line 149)


state 38
	ordinaltype:  T_MAP.    (5)

	.  reduce 5 (src line 150)


state 39
	ordinaltype:  T_FLOAT.    (6)

	.  reduce 6 (src line 151)


state 40
	ordinaltype:  T_MONEY.    (7)

	.  reduce 7 (src line 152)


state 41
	ordinaltype:  T_OBJECT.    (8)

	.  reduce 8 (src line 153)


state 42
	ordinaltype:  T_BYTES.    (9)

	.  reduce 9 (src line 154)


state 43
	ordinaltype:  T_FILE.    (10)

	.  reduce 10 (src line 155)


state 44
	contract_data:  DATA LBRACE NEWLINE.var_declarations NEWLINE RBRACE NEWLINE 

	T_INT  shift 35
	T_BOOL  shift 34
	T_STR  shift 36
	T_ARR  shift 37
	T_MAP  shift 38
	T_FLOAT  shift 39
	T_MONEY  shift 40
	T_OBJECT  shift 41
	T_BYTES  shift 42
	T_FILE  shift 43
	.  error

	ordinaltype  goto 33
	type  goto 87
	var_declaration  goto 86
	var_declarations  goto 85

state 45
	statements:  statements statement NEWLINE.    (18)

	.  reduce 18 (src line 172)


state 46
	switch:  SWITCH expr.NEWLINE case default 
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	NEWLINE  shift 88
	ADD  shift 91
	SUB  shift 92
	MUL  shift 89
	DIV  shift 90
	MOD  shift 93
	AND  shift 94
	OR  shift 95
	EQ  shift 96
	NOT_EQ  shift 97
	LT  shift 100
	GT  shift 101
	LTE  shift 98
	GTE  shift 99
	.  error


state 47
	expr:  LPAREN.expr RPAREN 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 102
	index  goto 56

state 48
	expr:  INT.    (85)

	.  reduce 85 (src line 287)


state 49
	expr:  FLOAT.    (86)

	.  reduce 86 (src line 288)


state 50
	expr:  STRING.    (87)

	.  reduce 87 (src line 289)


state 51
	expr:  QSTRING.    (88)

	.  reduce 88 (src line 290)


state 52
	expr:  TRUE.    (89)

	.  reduce 89 (src line 291)


state 53
	expr:  FALSE.    (90)

	.  reduce 90 (src line 292)


state 54
	expr:  CALL.params RPAREN 
	params: .    (19)

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  reduce 19 (src line 175)

	params  goto 103
	expr  goto 80
	index  goto 56

state 55
	expr:  CALLCONTRACT.cntparams RPAREN 
	cntparams: .    (22)

	IDENT  shift 82
	.  reduce 22 (src line 181)

	cntparams  goto 104

state 56
	index:  index.LBRACKET expr RBRACKET 
	expr:  index.    (93)

	LBRACKET  shift 70
	.  reduce 93 (src line 295)


state 57
	expr:  ENV.    (94)

	.  reduce 94 (src line 296)


state 58
	expr:  IDENT.    (95)

	.  reduce 95 (src line 297)


state 59
	expr:  OBJ.object RBRACE 

	IDENT  shift 107
	STRING  shift 106
	.  error

	object  goto 105

state 60
	expr:  LBRACE.exprlist RBRACE 
	expr:  LBRACE.exprmaplist RBRACE 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 111
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 110
	index  goto 56
	exprlist  goto 108
	exprmaplist  goto 109

state 61
	expr:  QUESTION.LPAREN expr COMMA expr COMMA expr RPAREN 

	LPAREN  shift 112
	.  error


state 62
	expr:  SUB.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 113
	index  goto 56

state 63
	expr:  NOT.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 114
	index  goto 56

state 64
	statement:  var ASSIGN.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 115
	index  goto 56

state 65
	statement:  var ADD_ASSIGN.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 116
	index  goto 56

state 66
	statement:  var SUB_ASSIGN.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 117
	index  goto 56

state 67
	statement:  var MUL_ASSIGN.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 118
	index  goto 56

state 68
	statement:  var DIV_ASSIGN.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 119
	index  goto 56

state 69
	statement:  var MOD_ASSIGN.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 120
	index  goto 56

state 70
	index:  index LBRACKET.expr RBRACKET 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 121
	index  goto 56

state 71
	statement:  index ASSIGN.expr 

	IDENT  shift 58
	ENV  shift 57
	CALL  shift 54
	CALLCONTRACT  shift 55
	INDEX  shift 32
	INT  shift 48
	FLOAT  shift 49
	STRING  shift 50
	QSTRING  shift 51
	TRUE  shift 52
	FALSE  shift 53
	LPAREN  shift 47
	OBJ  shift 59
	LBRACE  shift 60
	QUESTION  shift 61
	SUB  shift 62
	NOT  shift 63
	.  error

	expr  goto 122
	index  goto 56

state 72
	type:  type DOT.ordinaltype 

	T_INT  shift 35
	T_BOOL  shift 34
	T_STR  shift 36
	T_ARR  shift 37
	T_MAP  shift 38
	T_FLOAT  shift 39
	T_MONEY  shift 40
	T_OBJECT  shift 41
	T_BYTES  shift 42
	T_FILE  shift 43
	.  error

	ordinaltype  goto 123
